[package]
name = "fcli"
version = "0.1.0"
edition = "2021"
description = "An attribute macro to simplify writing simple command line applications."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
