[package]
name = "fncli"
version = "0.2.1"
edition = "2021"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
description = "An attribute macro to simplify writing simple command line applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidhanio/fncli"
readme = "README.md"
keywords = ["command-line", "cli", "macro"]
categories = ["command-line-interface"]


[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
